force-app/main/default/objects/Opportunity/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Read Only - holds pre-Salesforce gift information mapped in from eTapestry</description>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online gift</fullName>
            </value>
            <value>
                <fullName>Online Registration</fullName>
            </value>
            <value>
                <fullName>Sample Data</fullName>
            </value>
            <value>
                <fullName>Everyday Hero</fullName>
            </value>
            <value>
                <fullName>JustGiving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>