force-app/main/default/objects/Opportunity/fields/Date_Income_Hit_the_Bank__c.field-meta.xml
<CustomField>
    <fullName>Date_Income_Hit_the_Bank__c</fullName>
    <description>This is the date the income hit the bank</description>
    <inlineHelpText>Do not use this field</inlineHelpText>
    <label>Date Income Hit the Bank</label>
    <type>Date</type>
</CustomField>