force-app/main/default/objects/Opportunity/fields/Donation_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Sub_Type__c</fullName>
    <description>Read Only - holds pre-Salesforce gift information mapped in from eTapestry</description>
    <label>Donation Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>Donation - P2P group amount</fullName>
            </value>
            <value>
                <fullName>Regular Giving</fullName>
            </value>
            <value>
                <fullName>In Memoriam</fullName>
            </value>
            <value>
                <fullName>Bequest</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Corporate Match Giving</fullName>
            </value>
            <value>
                <fullName>Workplace Giving</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>In kind goods</fullName>
            </value>
            <value>
                <fullName>In kind services</fullName>
            </value>
            <value>
                <fullName>Merchandise</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>Raffle</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Auction Item</fullName>
            </value>
            <value>
                <fullName>Acrylic Donation Box</fullName>
                <isActive>false</isActive>
                <label>Acrylic Donation Box</label>
            </value>
            <value>
                <fullName>Bond Refund</fullName>
                <isActive>false</isActive>
                <label>Bond Refund</label>
            </value>
            <value>
                <fullName>Vending Machines</fullName>
                <isActive>false</isActive>
                <label>Vending Machines</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>