force-app/main/default/objects/Opportunity/fields/EDH_Generated_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>EDH_Generated_Receipt_Number__c</fullName>
    <label>EDH Generated Receipt Number</label>
    <length>155</length>
    <type>Text</type>
</CustomField>