force-app/main/default/objects/Opportunity/fields/eTapestry_Generated_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>eTapestry_Generated_Receipt_Number__c</fullName>
    <label>eTapestry Generated Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>