force-app/main/default/objects/Opportunity/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>Legacy field from eTapestry, Evenico created Opportunities will not populate a value into this field</description>
    <label>Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>