force-app/main/default/objects/Opportunity/fields/External_Recurring_Donation_Link__c.field-meta.xml
<CustomField>
    <fullName>External_Recurring_Donation_Link__c</fullName>
    <description>URL of the recurring donation record on the website</description>
    <inlineHelpText>URL of the recurring donation record on the website</inlineHelpText>
    <label>External Recurring Donation Link</label>
    <type>Url</type>
</CustomField>