force-app/main/default/objects/Opportunity/fields/External_Recurring_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Recurring_ID__c</fullName>
    <description>The (unique identifier) Recurring Order ID on the website</description>
    <inlineHelpText>The (unique identifier) Recurring Order ID on the website</inlineHelpText>
    <label>External Recurring ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>