force-app/main/default/objects/Opportunity/fields/Extra_Question_Label_1__c.field-meta.xml
<CustomField>
    <fullName>Extra_Question_Label_1__c</fullName>
    <description>This refers to the extra question added to donations in Pixo</description>
    <inlineHelpText>This refers to the extra question added to donations in Pixo</inlineHelpText>
    <label>Extra Question Label 1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>