force-app/main/default/objects/Opportunity/fields/Extra_Question_Value_1__c.field-meta.xml
<CustomField>
    <fullName>Extra_Question_Value_1__c</fullName>
    <description>This refers to the extra question value entered by the user in Pixo while making a donation</description>
    <inlineHelpText>This refers to the extra question value entered by the user in Pixo while making a donation</inlineHelpText>
    <label>Extra Question Value 1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>