force-app/main/default/objects/Opportunity/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <label>Fund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>General/Untied</fullName>
            </value>
            <value>
                <fullName>NSW-General Donations</fullName>
            </value>
            <value>
                <fullName>NSW-General Operating</fullName>
            </value>
            <value>
                <fullName>NSW-Regional Support</fullName>
            </value>
            <value>
                <fullName>NSW-Sundry</fullName>
            </value>
            <value>
                <fullName>NSW-Support</fullName>
            </value>
            <value>
                <fullName>NSW-Where it is needed most</fullName>
            </value>
            <value>
                <fullName>QLD-Dragon Boat Ticket Sales</fullName>
            </value>
            <value>
                <fullName>QLD-Family Camp</fullName>
            </value>
            <value>
                <fullName>QLD-Gala Ball Ticket Sales</fullName>
            </value>
            <value>
                <fullName>QLD-HeartKids</fullName>
            </value>
            <value>
                <fullName>QLD-Noosa Tri Ticket Sales</fullName>
            </value>
            <value>
                <fullName>QLD-Regional Support</fullName>
            </value>
            <value>
                <fullName>QLD-Teen Camp</fullName>
            </value>
            <value>
                <fullName>QLD - Where it is needed most</fullName>
            </value>
            <value>
                <fullName>QLD-Where it is needed most</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>SA-Where it is needed most</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Tied</fullName>
            </value>
            <value>
                <fullName>VIC-Where it is needed most</fullName>
            </value>
            <value>
                <fullName>WA-General</fullName>
            </value>
            <value>
                <fullName>WA-Restricted</fullName>
            </value>
            <value>
                <fullName>WA-Unrestricted</fullName>
            </value>
            <value>
                <fullName>Where it is needed most QLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>