force-app/main/default/objects/Opportunity/fields/Fundraising_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign that has received the sponsor donation</description>
    <inlineHelpText>The campaign that has received the sponsor donation</inlineHelpText>
    <label>Fundraising Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Sponsor Donation Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>