force-app/main/default/objects/Opportunity/fields/Funraisin__Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Donation_Type__c</fullName>
    <label>Donation Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>