force-app/main/default/objects/Opportunity/fields/Funraisin__Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraiser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Fundraiser)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>