force-app/main/default/objects/Opportunity/fields/Funraisin__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__OrderNumber__c</fullName>
    <label>Order Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>