force-app/main/default/objects/Opportunity/fields/Funraisin__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>