force-app/main/default/objects/Opportunity/fields/Funraisin__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>