force-app/main/default/objects/Opportunity/fields/Funraisin__Raffle_Ticket_End__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Raffle_Ticket_End__c</fullName>
    <label>Raffle Ticket End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>