force-app/main/default/objects/Opportunity/fields/Funraisin__Raffle_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Raffle_Tickets__c</fullName>
    <label>Raffle Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>