force-app/main/default/objects/Opportunity/fields/Funraisin__Refund_Reason__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Refund_Reason__c</fullName>
    <label>Refund Reason</label>
    <type>TextArea</type>
</CustomField>