force-app/main/default/objects/Opportunity/fields/Funraisin__Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Source Opportunity)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>