force-app/main/default/objects/Opportunity/fields/Funraisin__Team__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Funraisin__Team__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>