force-app/main/default/objects/Opportunity/fields/Funraisin__TrackingNumber__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__TrackingNumber__c</fullName>
    <label>Tracking Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>