force-app/main/default/objects/Opportunity/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>