force-app/main/default/objects/Opportunity/fields/Grant_contract_agreement_on_file__c.field-meta.xml
<CustomField>
    <fullName>Grant_contract_agreement_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick when the grant contract/agreement has been added to the Salesforce file</description>
    <inlineHelpText>Tick when the grant contract/agreement has been added to the Salesforce file</inlineHelpText>
    <label>Grant contract/agreement on file</label>
    <type>Checkbox</type>
</CustomField>