force-app/main/default/objects/Opportunity/fields/Grant_State__c.field-meta.xml
<CustomField>
    <fullName>Grant_State__c</fullName>
    <description>This is the state the grant is to be used for</description>
    <inlineHelpText>This is the state the grant is to be used for</inlineHelpText>
    <label>Grant State</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>NAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>