force-app/main/default/objects/Opportunity/fields/Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Status__c</fullName>
    <description>The status of the grant once won</description>
    <inlineHelpText>The status of the grant once won</inlineHelpText>
    <label>Grant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Acquitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>