force-app/main/default/objects/Opportunity/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <description>This is the type of grant applied for</description>
    <inlineHelpText>This is the type of grant applied for</inlineHelpText>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>State Grant</fullName>
                <label>Government Grant</label>
            </value>
            <value>
                <fullName>Community Grant</fullName>
                <label>Local Grant</label>
            </value>
            <value>
                <fullName>National Grant</fullName>
                <isActive>false</isActive>
                <label>National Grant</label>
            </value>
            <value>
                <fullName>Philanthropic</fullName>
                <label>Trusts &amp; Foundations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>