force-app/main/default/objects/Opportunity/fields/HeartKid_Programs__c.field-meta.xml
<CustomField>
    <fullName>HeartKid_Programs__c</fullName>
    <description>These are the HeartKid programs related to grants received</description>
    <inlineHelpText>These are the HeartKid programs related to grants received</inlineHelpText>
    <label>HeartKid Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Capacity Building - equipment</fullName>
            </value>
            <value>
                <fullName>Capacity Building - personnel</fullName>
            </value>
            <value>
                <fullName>Care bags</fullName>
            </value>
            <value>
                <fullName>Classroom Inclusion</fullName>
            </value>
            <value>
                <fullName>Early Childhood Intervention</fullName>
            </value>
            <value>
                <fullName>Financial Assistance</fullName>
            </value>
            <value>
                <fullName>Indigenous</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Regional and Rural Support Development</fullName>
            </value>
            <value>
                <fullName>Teen Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>