force-app/main/default/objects/Opportunity/fields/Is_Admin_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, this checkbox indicates it is an admin order</description>
    <inlineHelpText>If enabled, this checkbox indicates it is an admin order</inlineHelpText>
    <label>Is Admin Order</label>
    <type>Checkbox</type>
</CustomField>