force-app/main/default/objects/Opportunity/fields/Is_close_date_month_current_month__c.field-meta.xml
<CustomField>
    <fullName>Is_close_date_month_current_month__c</fullName>
    <description>This field is used for Dashboard reports and is set to TRUE if Close Date&apos;s month equals current month</description>
    <formula>(IF( MONTH( CloseDate ) = MONTH(Today()), True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for Dashboard reports and is set to TRUE if Close Date&apos;s month equals current month</inlineHelpText>
    <label>Is close date month = current month?</label>
    <type>Checkbox</type>
</CustomField>