force-app/main/default/objects/Opportunity/fields/Legacy_Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Gift_Type__c</fullName>
    <description>Read Only - holds pre-Salesforce gift information mapped in from eTapestry</description>
    <label>Legacy Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Electronic Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Gift In Kind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>