force-app/main/default/objects/Opportunity/fields/md_npsp_pack__Fee__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Fee__c</fullName>
    <description>The total fees (excluding tax) for the donation</description>
    <label>Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>