force-app/main/default/objects/Opportunity/fields/md_npsp_pack__Gateway_Fee_Tax__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Gateway_Fee_Tax__c</fullName>
    <description>.</description>
    <label>Gateway Fee Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>