force-app/main/default/objects/Opportunity/fields/md_npsp_pack__Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Receipt_Number__c</fullName>
    <description>.</description>
    <label>Receipt Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>