force-app/main/default/objects/Opportunity/fields/movedata__Platform_Key__c.field-meta.xml
<CustomField>
    <fullName>movedata__Platform_Key__c</fullName>
    <description>MoveData Platform Key for an Opportunity. Used to link with incoming notifications.</description>
    <externalId>true</externalId>
    <label>Platform Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>