force-app/main/default/objects/Opportunity/fields/Number_of_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tickets__c</fullName>
    <description>Represents the number of tickets that is part of an event registration order in Pixo</description>
    <inlineHelpText>Represents the number of tickets that is part of an event registration order in Pixo</inlineHelpText>
    <label>Number of Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>