force-app/main/default/objects/Opportunity/fields/Opportunity_s_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_s_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Opportunity Id</label>
    <type>Text</type>
</CustomField>