force-app/main/default/objects/Opportunity/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <formula>Owner.IsActive</formula>
    <label>Owner_Active</label>
    <type>Checkbox</type>
</CustomField>