force-app/main/default/objects/Opportunity/fields/Owner_State__c.field-meta.xml
<CustomField>
    <fullName>Owner_State__c</fullName>
    <description>Is Oppty &gt; Campaign &gt; Page Owner State OR if blank, then Oppty &gt;Account Name &gt; Billing State, OR if blank, then Oppty &gt; Primary Contact &gt; Mailing State OR if blank then Oppty &gt; Primary Contact &gt; Other State. Will return blank if all are blank.</description>
    <formula>IF(
NOT( ISBLANK(Campaign.Page_Owner_State__c) ),
Campaign.Page_Owner_State__c,
IF(
AND(
ISBLANK(Campaign.Page_Owner_State__c),
NOT( ISBLANK(Account.BillingState) )
),
Account.BillingState,
IF(
AND(
ISBLANK(Campaign.Page_Owner_State__c),
ISBLANK(Account.BillingState),
NOT( ISBLANK(npsp__Primary_Contact__r.MailingState) )
),
npsp__Primary_Contact__r.MailingState,
IF(
AND(
ISBLANK(Campaign.Page_Owner_State__c),
ISBLANK(Account.BillingState),
ISBLANK(npsp__Primary_Contact__r.MailingState),
NOT( ISBLANK(npsp__Primary_Contact__r.OtherState) )
),
npsp__Primary_Contact__r.OtherState,
NULL
)
)
)
)</formula>
    <inlineHelpText>Is Oppty &gt; Campaign &gt; Page Owner State OR if blank, then Oppty &gt;Account Name &gt; Billing State, OR if blank, then Oppty &gt; Primary Contact &gt; Mailing State OR if blank then Oppty &gt; Primary Contact &gt; Other State. Will return blank if all are blank.</inlineHelpText>
    <label>Owner State</label>
    <type>Text</type>
</CustomField>