force-app/main/default/objects/Opportunity/fields/Primary_Contact_s_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_s_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(npsp__Primary_Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Id</label>
    <type>Text</type>
</CustomField>