force-app/main/default/objects/Opportunity/fields/Primary_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_State__c</fullName>
    <formula>npsp__Primary_Contact__r.MailingState</formula>
    <label>Primary Contact State</label>
    <type>Text</type>
</CustomField>