force-app/main/default/objects/Opportunity/fields/Program_Areas__c.field-meta.xml
<CustomField>
    <fullName>Program_Areas__c</fullName>
    <description>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</description>
    <inlineHelpText>Use this to describe the funding areas for the Grant or Donation. For example, the names of the programs the Grant or Donation is designated for.</inlineHelpText>
    <label>Program Areas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>