force-app/main/default/objects/Opportunity/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <description>This is the coding for ALL grants to reconcile with Xero and AFG</description>
    <inlineHelpText>This is the coding for ALL grants to reconcile with Xero and AFG</inlineHelpText>
    <label>Program Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>